--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   path_provider:
   path:
   permission_handler: ^3.1.0
+  http: ^0.12.0+1
+  modal_progress_hud: ^0.1.3
+
 
 dev_dependencies:
   flutter_test:
