--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   permission_handler: ^3.1.0
   http: ^0.12.0+1
   modal_progress_hud: ^0.1.3
+  carousel_slider: ^1.3.0
+
 
 
 dev_dependencies:
@@ -63,17 +65,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: NotoCjkKR
+      fonts:
+        - asset: fonts/NotoSansCJKkr-Bold.otf
+        - asset: fonts/NotoSansCJKkr-Light.otf
+        - asset: fonts/NotoSansCJKkr-Medium.otf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
