--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   torch: ^0.1.1
   url_launcher: ^5.1.3
   image_picker: ^0.6.0+9
+  shared_preferences: any
 
 
 
@@ -59,6 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/data/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
