--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application amde with flutter.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -37,7 +37,10 @@ dependencies:
   torch: ^0.1.1
   url_launcher: ^5.1.3
   image_picker: ^0.6.0+9
+  image_cropper: ^1.0.2
+  flutter_image_compress: ^0.6.0
   shared_preferences: any
+
 
 
 
