--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   googleapis_auth: any
   google_sign_in: any
   qr_flutter: any
-  torch: ^0.1.1
+  lamp: ^0.0.6
   url_launcher: ^5.1.3
   image_picker: ^0.6.0+9
   image_cropper: ^1.0.2
