--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   googleapis: any
   googleapis_auth: any
   google_sign_in: any
+  firebase_auth: ^0.14.0+5
   qr_flutter: any
   lamp: ^0.0.6
   url_launcher: ^5.1.3
   image_picker: ^0.6.0+9
   image_cropper: ^1.0.2
+  pull_to_refresh:
   flutter_image_compress: ^0.6.0
   shared_preferences: any
   connectivity: ^0.4.4
