: 메인페이지에서 "알고계셨나요?" 탭 timeOut(10초) 추가
! 메인페이지에서 fab 버튼을 누르면 순간적으로 잘못된 정보 반환하는 버그

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_image_compress: ^0.6.0
   shared_preferences: any
   connectivity: ^0.4.4
+  cached_network_image: ^1.1.2+1
 
 
 
