: 쓰레기 분리수거 정보 정상, 쓰레기 인공지능 분석 결과 정상,
! 카메라 관련 액티비티 순서가 꼬임 곧 수정될 것임.
! 메인페이지에서 fab 버튼을 누르면 순간적으로 다시 로딩하며 잘못된 정보 반환하는 버그.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -43,6 +43,16 @@
 
         </activity>
 
+        <receiver android:name=".SmartcycleWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
+
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
