--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,31 +20,32 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+  flutter_cupertino_localizations: ^1.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  camera: ^0.5.4+2
+  camera: ^0.5.6+3
   path_provider:
   path:
-  permission_handler: ^3.1.0
-  http: ^0.12.0+1
-  modal_progress_hud: ^0.1.3
+  http:
   carousel_slider: ^1.3.0
   googleapis: any
   googleapis_auth: any
   google_sign_in: any
-  firebase_auth: ^0.14.0+5
+  firebase_auth:
   qr_flutter: any
-  lamp: ^0.0.6
-  url_launcher: ^5.1.3
-  image_picker: ^0.6.0+9
-  image_cropper: ^1.0.2
+  lamp:
+  url_launcher:
+  image_picker:
+  image_cropper:
   pull_to_refresh:
-  flutter_image_compress: ^0.6.0
-  shared_preferences: any
-  connectivity: ^0.4.4
-  image: ^2.1.6
-  cached_network_image: ^1.1.2+1
+  flutter_image_compress:
+  shared_preferences:
+  connectivity:
+  image:
+  cached_network_image: ^2.0.0-rc
 
 
 
@@ -69,8 +70,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/data/
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
