: 로그아웃시 모든 스택 제거하도록 수정, 인공지능 개선을 위한 이미지 전송 동의 다이얼로그 추가, 인공지능 개선을 위한 개인정보 정책 페이지 추가, 잘못 선택했을 경우 뒤로 돌아갈 수 있는 기능 추가
! 태블릿 화면에서 "알고계셨나요" 탭의 리스트뷰 레이아웃 깨짐

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,8 @@ android {
 
     lintOptions {
         disable 'InvalidPackage'
+        checkReleaseBuilds false
+
     }
 
     defaultConfig {
@@ -43,6 +45,8 @@ android {
         applicationId "com.dimipo.smartcycle"
         minSdkVersion 21
         targetSdkVersion 29
+        versionCode 3
+        versionName "1.1.2"
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
